Fix: Fixed the overflow of the navbar to the container, just need to opt images/Applications/AMPPS/php/bin/php -c /Applications/AMPPS/php/etc/php.ini /Applications/AMPPS/ampps/softaculous/cron.php

--- a/templates/purity_iii/css/bootstrap.css
+++ b/templates/purity_iii/css/bootstrap.css
@@ -430,7 +430,7 @@ pre code {
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1280px;
+    width: 1180px;
   }
 }
 .container-fluid {
