--- a/templates/purity_iii/css/custom.css
+++ b/templates/purity_iii/css/custom.css
@@ -5,46 +5,41 @@ font-size: 10px;
 
 
 .nav-container{
-  width: 1400px;
+  width: 100% !important;
+  overflow: hidden;
 }
 
 .dj-image{
   	height: 95% !important;
-	width: 100%;  
+  	width: 100%;
+	 
    
 }
 
 .img-slider{
   margin-top: -50px; 
   margin-right: -100px;
-  width: 100%;
+  width: 100% !important;
+
+  
+
 }
 
 
 .container{
-  margin-right: 0;
-  margin-left: 0;
+  margin: auto;
+  margin-right: auto;
+  margin-left: auto;
   padding-left: 0;
   padding-right: 0;
-
+  display:block;
+  width: 100% !important;
+  overflow: hidden;
+ 
+ 
 
 }
 
-@media (min-width: 768px) {
-  .container {
-    width: 100%;
-    margin: auto;
-  }
-}
-@media (min-width: 992px) {
-  .container {
-    width: 100%;
-    margin: auto;
-  }
-}
-@media (min-width: 1200px) {
-  .container {
-    width: 100%;
-    margin: auto;
-  }
+.t3-footer{
+  width: 100% !important;
 }
